language/move-lang/tests/move_check/borrows/eq_unassigned_local.exp
error: 

   ┌── tests/move_check/borrows/eq_unassigned_local.move:5:9 ───
   │
 5 │         ref == &x;
   │         ^^^ Invalid usage of local 'ref'
   ·
 4 │         let ref;
   │             --- The local does not have a value due to this position. The local must be assigned a value before being used
   │

