language/move-lang/tests/move_check/borrows/eq_unassigned_local.move
script {
    fun main() {
        let x = 5;
        let ref;
        ref == &x;
    }
}
